--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v0.1.alpha.5. Updating to Facebook FQL changes
+
 v0.1.alpha.4. RFQL::request -> RFQL.request
 
 v0.1.alpha.3. moved a require to the right place
